OO-4794: option to make identity name generated auto or manually